Fix titles spacing

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -41,8 +41,8 @@ a {
 .page-template-default.page .type-page .entry-header .entry-title {
   width: fit-content;
   margin: 0 auto;
-  background: $blue;
-  padding: 4rem;
+  background: $purple;
+  padding: 4rem 6rem;
   color: $white;
   clip-path: polygon(1.07% 1.13%, 96.72% 3.92%, 96% 92.19%, 0px 97%);
 }
